<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.bookinghub</groupId>
    <artifactId>booking-hub-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Booking HUB - Parent</name>
    <description>Sistema de agendamento distribuído - Tech Challenge Fase 3</description>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.2.3</spring-boot.version>
        <spring-cloud.version>2023.0.0</spring-cloud.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <rewrite.version>5.36.0</rewrite.version>
    </properties>

    <modules>
        <module>api-gateway</module>
        <module>auth-service</module>
        <module>catalog-service</module>
        <module>booking-service</module>
        <module>search-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <configLocation>google_checks.xml</configLocation>
                        <suppressionsLocation>${project.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
                        <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                        <failsOnError>true</failsOnError>
                        <failOnViolation>true</failOnViolation>
                        <violationSeverity>warning</violationSeverity>
                        <consoleOutput>true</consoleOutput>
                        <excludes>**/target/**</excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>4.8.3.1</version>
                    <configuration>
                        <effort>Max</effort>
                        <threshold>Medium</threshold>
                        <failOnError>true</failOnError>
                        <excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openrewrite.maven</groupId>
                    <artifactId>rewrite-maven-plugin</artifactId>
                    <version>${rewrite.version}</version>
                    <configuration>
                        <activeStyles>
                            <style>com.bookinghub.GoogleStyle</style>
                        </activeStyles>
                        <activeRecipes>
                            <!-- Formatação (resolve Indentation + EmptyLineSeparator) -->
                            <recipe>org.openrewrite.java.format.AutoFormat</recipe>
                            <!-- Imports (resolve CustomImportOrder + AvoidStarImport) -->
                            <recipe>org.openrewrite.java.RemoveUnusedImports</recipe>
                            <recipe>org.openrewrite.java.OrderImports</recipe>
                            <!-- Code smells -->
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryParentheses</recipe>
                            <recipe>org.openrewrite.staticanalysis.SimplifyBooleanReturn</recipe>
                            <recipe>org.openrewrite.staticanalysis.UnnecessaryThrows</recipe>
                        </activeRecipes>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.openrewrite.recipe</groupId>
                            <artifactId>rewrite-static-analysis</artifactId>
                            <version>1.19.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.23.0</version>
                    <configuration>
                        <rulesets>
                            <ruleset>/rulesets/java/quickstart.xml</ruleset>
                        </rulesets>
                        <failOnViolation>true</failOnViolation>
                        <printFailingErrors>true</printFailingErrors>
                        <excludeRoots>
                            <excludeRoot>target/generated-sources</excludeRoot>
                        </excludeRoots>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.11</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- Plugins que executam em todos os módulos filhos -->
        <plugins>
            <!--
              Surefire: exclui testes de integração/BDD da fase 'test' (unit tests).
              Configurado aqui no POM para garantir comportamento consistente
              independente do JUnit engine (Vintage, Jupiter ou Platform Suite).
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                        <exclude>**/CucumberTest.java</exclude>
                        <exclude>**/StepDefinitions.java</exclude>
                        <exclude>**/SpringIntegrationConfig.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <!--
                  Exclusões globais consolidadas de todos os módulos:
                  classes sem lógica de negócio que distorcem a cobertura.
                  - Infraestrutura sem lógica: Application, Entity, Embeddable
                  - DTOs / eventos de mensageria (mapeamento puro)
                  - Adaptadores de saída para sistemas externos (ES, REST clients,
                    JPA repositories) — cobertos por testes de integração/BDD
                  - Configurações Spring (@Configuration / @Bean glue code)
                -->
                <configuration>
                    <excludes>
                        <!-- Bootstrap -->
                        <exclude>**/*Application.class</exclude>

                        <!-- Entidades JPA (sem lógica de negócio) -->
                        <exclude>**/*Entity.class</exclude>
                        <exclude>**/*JpaEntity.class</exclude>
                        <exclude>**/*Embeddable.class</exclude>

                        <!-- Interfaces Spring Data (geradas pelo framework, sem código) -->
                        <exclude>**/Jpa*Repository.class</exclude>

                        <!-- DTOs, payloads e objetos de resposta (mapeamento puro) -->
                        <exclude>**/dto/**</exclude>
                        <exclude>**/*Payload.class</exclude>
                        <exclude>**/*Response.class</exclude>

                        <!-- Eventos de mensageria (estruturas de dado) -->
                        <exclude>**/messaging/*Event.class</exclude>

                        <!-- Classes de exceção (value objects, sem lógica testável separadamente) -->
                        <exclude>**/exceptions/**</exclude>

                        <!-- Adaptadores de infraestrutura (ES, REST clients, etc.)
                             (cobertura garantida pelos testes de integração/BDD) -->
                        <exclude>**/*EsDocument*.class</exclude>
                        <exclude>**/*SearchRepository.class</exclude>
                        <exclude>**/infrastructure/adapters/out/elasticsearch/ElasticsearchRepositoryAdapter*.class</exclude>
                        <exclude>**/infrastructure/adapters/out/catalog/CatalogRestClient*.class</exclude>

                        <!-- Configurações Spring (@Configuration / @Bean glue code) -->
                        <exclude>**/configuration/**</exclude>
                        <exclude>**/config/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <goals><goal>check</goal></goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>INSTRUCTION</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.80</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
